Creative layout issue is Preview frame is fixed

--- a/backend/layouts/catch-to-collect/index.html
+++ b/backend/layouts/catch-to-collect/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
     <title>Delivery Game</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+   
     <div class="game-container">
         <div class="header">
             <img src="./assets/logo1.png" alt="Logo" class="header-logo">
@@ -49,8 +51,9 @@
             <img src="./assets/item7.png" class="items3" >
            </div>
         </div>
+        </div>
        <img src="./assets/cart.png" id="cart">
-    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
