--- a/backend/layouts/God of War/index.html
+++ b/backend/layouts/God of War/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="ad.size" content="width=360, height=640">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Playable Game Ad</title>
     <link rel="stylesheet" href="./style.css">
 </head>
