--- a/backend/layouts/Pac-man/index.html
+++ b/backend/layouts/Pac-man/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="ad.size" content="width=360, height=640">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
 		<title>Pac-Man</title>
 		<link rel="stylesheet" href="./style.css">
 		<link href="/public/css2.css" rel="stylesheet">
